--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -16,6 +16,7 @@
     "@feathersjs/authentication-client": "4.5.11",
     "@feathersjs/rest-client": "4.5.11",
     "@hookform/resolvers": "^3.3.2",
+    "@feathersjs/socketio-client": "4.5.15",
     "@mui/icons-material": "^5.14.13",
     "@mui/lab": "^5.0.0-alpha.152",
     "@mui/material": "^5.14.13",
@@ -42,6 +43,7 @@
     "react-router-dom": "6.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "5.3.3",
+    "socket.io-client": "2.5.0",
     "typescript": "4.5.4",
     "webpack": "4.44.2",
     "yup": "^1.3.2"
