--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -15,8 +15,12 @@
     "@emotion/styled": "^11.11.0",
     "@feathersjs/authentication-client": "4.5.11",
     "@feathersjs/rest-client": "4.5.11",
-    "@hookform/resolvers": "^3.3.2",
     "@feathersjs/socketio-client": "4.5.15",
+    "@fullcalendar/core": "^6.1.9",
+    "@fullcalendar/daygrid": "^6.1.9",
+    "@fullcalendar/react": "^6.1.9",
+    "@fullcalendar/timegrid": "^6.1.9",
+    "@hookform/resolvers": "^3.3.2",
     "@mui/icons-material": "^5.14.13",
     "@mui/lab": "^5.0.0-alpha.152",
     "@mui/material": "^5.14.13",
@@ -42,8 +46,8 @@
     "react-redux": "7.2.6",
     "react-router-dom": "6.0.2",
     "react-scripts": "4.0.3",
-    "styled-components": "5.3.3",
     "socket.io-client": "2.5.0",
+    "styled-components": "5.3.3",
     "typescript": "4.5.4",
     "webpack": "4.44.2",
     "yup": "^1.3.2"
