--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -27,6 +27,7 @@
     "@mui/x-date-pickers": "^6.18.1",
     "@reduxjs/toolkit": "1.6.2",
     "@tinymce/tinymce-react": "^4.3.0",
+    "@types/lodash": "^4.14.201",
     "@types/node": "14.14.45",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -36,6 +37,7 @@
     "@typescript-eslint/parser": "5.4.0",
     "babel-loader": "8.1.0",
     "dayjs": "^1.11.10",
+    "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-app-rewired": "2.2.1",
     "react-dom": "^17.0.2",
